--- a/Blocsoc Landing Page/index.html
+++ b/Blocsoc Landing Page/index.html
@@ -81,11 +81,22 @@
     </div>
 
     <div class="container-4">
-      <img class="icons" src="images/icons8-facebook-24.png" />
-      <img class="icons" src="images/icons8-github-24.png" />
-      <img class="icons" src="images/icons8-instagram-24.png" />
-      <img class="icons" src="images/icons8-linkedin-24.png" />
-      <img class="icons" src="images/icons8-twitter-24.png" />
+      <a href="https://www.facebook.com/BlocSocIITR/"
+        ><img class="icons" src="images/icons8-facebook-24.png"
+      /></a>
+      <a href="https://github.com/BlocSoc-iitr"
+        ><img class="icons" src="images/icons8-github-24.png"
+      /></a>
+      <a href="https://www.instagram.com/p/CpUE8DJohco/"
+        ><img class="icons" src="images/icons8-instagram-24.png"
+      /></a>
+      <a
+        href="https://www.linkedin.com/posts/pradyuman-verma_github-blocsoc-iitrquantum-nft-bridge-activity-6911025734484455424-BQMA/"
+        ><img class="icons" src="images/icons8-linkedin-24.png"
+      /></a>
+      <a href="https://twitter.com/BlocSocIITR"
+        ><img class="icons" src="images/icons8-twitter-24.png"
+      /></a>
     </div>
   </body>
 </html>
